...
        case dailyRun = "daily_run"
        case weeklySpecial = "weekly_special"
        
        var displayName: String {
            switch self {
            case .tutorial: return "Tutorial"
            case .freePlay: return "Free Play"
            case .challenge: return "Challenge"
            case .dailyRun: return "Daily Run"
            case .weeklySpecial: return "Weekly Special"
            }
        }
    }
    
    // MARK: - Properties
    
...
